upstream: b=master,r=1b92cff5c5610e73df54724e81dbf0b519830fba,t=2015-09-24-2046-24584